# logss

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  deny.toml  example_config.yml  pepe
.github/workflows/: check.yml  check.yml.nkp  ci.yaml  quickstartrs.yml  release.yml  safety.yml  test.yml  test.yml.bkp
assets/: real_curl_example.yaml  short_shakespeare.txt
assets/cassettes/: complete.tape
src/: .handler.rs.rustfmt  .tstdin.rs.rustfmt  app.rs  args.rs  bars.rs  cb.rs  container.rs  event.rs  handler.rs  help.rs  input.rs  lib.rs  main.rs  popup.rs  states.rs  tstdin.rs  tui.rs
tests/: integration.rs
