[package]
name = "logss"
description = "A simple command line tool that helps you visualize an input stream of text."
version = "0.0.2"
authors = ["Victor Rosales <todoesverso@gmail.com>"]
edition = "2021"
publish = true
repository = "https://github.com/todoesverso/logss"
keywords = ["terminal", "logs", "cli", "split"]
categories = ["visualization", "command-line-utilities", "parsing"]
license = "MIT"
rust-version = "1.70.0"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]
readme = "README.md"

[badges]

[dependencies]
crossterm = "0.26.1"
is-terminal = "0.4.9"
unicode-width = "0.1.11"
pico-args = "0.5.0"
ratatui = "0.25.0"
regex = "1.9.5"
serde_yaml = "0.9.32"
serde = {version = "1.0.190", features = ["derive"]}
proc-macro2 = "1.0.70"
slug = "0.1.5"
anyhow = "1.0.75"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.3"
