[package]
name = "logss"
description = "A simple command line tool that helps you visualize an input stream of text."
version = "0.0.4"
authors = ["Victor Rosales <todoesverso@gmail.com>"]
edition = "2021"
publish = true
repository = "https://github.com/todoesverso/logss"
keywords = ["terminal", "logs", "cli", "split"]
categories = ["visualization", "command-line-utilities", "parsing"]
license = "MIT"
rust-version = "1.74.0"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]
readme = "README.md"

[badges]

[dependencies]
crossterm = "0.29.0"
is-terminal = "0.4.16"
unicode-width = "0.2.0"
pico-args = "0.5.0"
ratatui = "0.29.0"
regex = "1.12.2"
serde_yaml = "0.9.33"
serde = { version = "1.0.228", features = ["derive"] }
proc-macro2 = "1.0.101"
slug = "0.1.6"
anyhow = "1.0.100"
threadpool = "1.8.1"
wait-timeout = "0.2.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.3"
